# SICK-Solution-Hackathon

Museum-Heist/: .gitignore  README.md  museum-heist-dependencies.ps1
Museum-Heist/docs/: SETUP.md  TRAINING.md
Museum-Heist/museum-heist/: .gitignore
Museum-Heist/museum-heist-agent-training/: .gitignore  pyproject.toml
Museum-Heist/museum-heist-agent-training/config/: thief_config.yaml
Museum-Heist/museum-heist/Assets/ML-Agents/Timers/: SampleScene_timers.json
Museum-Heist/museum-heist/Assets/Materials/: Agent.mat  Artifact.mat  Cap.mat  Door.mat  Floor.mat  Guard.mat  LightBarrier.mat  Picture.mat  Picture2.mat  Walls 1.mat  Walls.mat
Museum-Heist/museum-heist/Assets/Prefabs/: Artifact.prefab  Environment.prefab  Guard.prefab  LightBarrier.prefab  Museum.prefab  Obstacle.prefab  Thief.prefab
Museum-Heist/museum-heist/Assets/Scenes/: MuseumHeist.unity
Museum-Heist/museum-heist/Assets/Scripts/: Artifact.cs  CloneEnvironment.cs  Door.cs  Environment.cs  Guard.cs  LightBarrier.cs  Movement.cs  ThiefAgent.cs
Museum-Heist/museum-heist/Assets/Scripts/Scenarios/: Scenario.cs  Scenario0.cs  Scenario1.cs  Scenario2.cs  Scenario3.cs  Scenario4.cs  Scenario5.cs  Scenario6.cs  Scenario7.cs  Scenario8.cs  Scenario9.cs
Museum-Heist/museum-heist/ProjectSettings/: ProjectSettings.asset  RiderScriptEditorPersistedState.asset
