[tool.poetry]
name = "museum-heist-agent-training"
version = "0.1.0"
description = ""
authors = ["grimmjo <jonas.grimm@sick.de>"]

[tool.poetry.dependencies]
python = "3.9.*"
mlagents = "^0.29.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
install-torch = "python -m pip install torch==1.8.0+cu111 -f https://download.pytorch.org/whl/torch_stable.html"
learn = "mlagents-learn"
tensorboard = "tensorboard --logdir results --port 6006"